<resources>
    <string name="app_name">SpiritualGuide</string>
    <string name="title_home_tarot">Tarot</string>
    <string name="title_home_quotes">Quotes</string>
    <string name="title_toolbar_tarot">TAROT</string>
    <string name="title_toolbar_card_meaning">Card Meaning</string>
    <string name="title_toolbar_all_cards">All Cards by Arcanas</string>
    <string name="title_toolbar_all_readings">All Readings</string>
    <string name="title_toolbar_little_cross">The Little Cross</string>
    <string name="title_toolbar_simple_path">The Simple Path</string>
    <string name="title_toolbar_path_of_wisdom">The Path of Wisdom</string>
    <string name="title_toolbar_love_oracle">The Love Oracle</string>
    <string name="title_toolbar_little_cross_meaning">Interpretation: Little Cross</string>
    <string name="title_toolbar_simple_path_meaning">Interpretation: Simple Path</string>
    <string name="title_toolbar_path_of_wisdom_meaning">Interpretation: Path of Wisdom</string>
    <string name="title_toolbar_love_oracle_meaning">Interpretation: Love Oracle</string>
    <string name="title_toolbar_quotes">QUOTES</string>
    <string name="title_toolbar_qotd">Quote of the Day</string>
    <string name="title_toolbar_my_fav_quotes">My Favorite Quotes</string>
    <string name="title_toolbar_fav_options">Options</string>
    <string name="cards_home_card_of_day_btn">EXPRESS \nCARD OF THE DAY</string>
    <string name="cards_home_all_readings_btn">YOUR PERSONAL\nCARD READING</string>
    <string name="cards_home_all_arcanas_btn">ALL CARDS AND\nTHEIR MEANINGS</string>
    <string name="quotes_home_quote_of_day_btn">EXPRESS \nQUOTE OF THE DAY</string>
    <string name="quotes_home_my_fav_quotes_btn">MY FAVORITE QUOTES</string>
    <string name="quotes_options_share_btn">Share</string>
    <string name="quotes_options_delete_btn">Delete from my\nfavorite quotes</string>
    <string name="quotes_options_deleted_toast">Quote DELETED</string>
    <string name="quotes_save_btn">Save in my \nfavorite quotes list</string>
    <string name="quotes_saved_toast">Quote SAVED</string>
    <string name="allcards_rv_trumps">Major Arcana (Trumps)</string>
    <string name="allcards_rv_cups">Cups (Minor Arcana)</string>
    <string name="allcards_rv_swords">Swords (Minor Arcana)</string>
    <string name="allcards_rv_wands">Wands (Minor Arcana)</string>
    <string name="allcards_rv_coins">Pentacles/Coins (Minor Arcana)</string>
    <string name="readings_home_simple_path_tv">The Simple Path</string>
    <string name="readings_home_little_cross_tv">The Little Cross</string>
    <string name="readings_home_path_of_wisdom_tv">The Path of Wisdom</string>
    <string name="readings_home_love_oracle_tv">The Love Oracle</string>
    <string name="readings_shuffle_btn">SHUFFLE</string>
    <string name="readings_lay_btn">LAY</string>
    <string name="readings_interpretation_btn">INTERPRETATION</string>
    <string name="little_cross_card_1">It\'s\nabout... </string>
    <string name="little_cross_card_2">Don\'t do\nthis! </string>
    <string name="little_cross_card_3">Do this! </string>
    <string name="little_cross_card_4">Future\nsurpise</string>
    <string name="simple_path_card_1">Past</string>
    <string name="simple_path_card_2">Present</string>
    <string name="simple_path_card_3">Future</string>
    <string name="path_of_wisdom_card_1">Chances</string>
    <string name="path_of_wisdom_card_2_7">objective\nawareness</string>
    <string name="path_of_wisdom_card_3_6">subjective\nemotions</string>
    <string name="path_of_wisdom_card_4_5">reality</string>
    <string name="path_of_wisdom_pic_conscious">CONSCIOUS</string>
    <string name="path_of_wisdom_pic_unconscious">UNCONSCIOUS</string>
    <string name="path_of_wisdom_pic_reality">REALITY</string>
    <string name="path_of_wisdom_pic_past">PAST</string>
    <string name="path_of_wisdom_pic_future">FUTURE</string>
    <string name="love_oracle_card_1">Relation issue</string>
    <string name="love_oracle_card_2">The other\nperson</string>
    <string name="love_oracle_card_3">YOU</string>
    <string name="love_oracle_card_4">What to do</string>
    <string name="one_card_value">Value:</string>
    <string name="one_card_keywords">Keywords</string>
    <string name="one_card_fortune_telling">Fortune telling</string>
    <string name="one_card_meaning">Meaning</string>
    <string name="one_card_qta">Questions to ask</string>
    <string name="one_card_description">Description</string>
    <string name="major_arcana">Major Arcana</string>
    <string name="minor_cups">Minor Arcana: Cups</string>
    <string name="minor_swords">Minor Arcana: Swords</string>
    <string name="minor_wands">Minor Arcana: Wands</string>
    <string name="minor_coins">Minor Arcana: Coins</string>
    <string name="card01_theFool_name">The Fool</string>
    <string name="card01_theFool_keywords">freedom, faith, inexperience, innocence</string>
    <string name="card01_theFool_fortune_telling">Watch for new projects and new beginnings.\nPrepare to take something on faith.\nSomething new comes your way; go for it!</string>
    <string name="card01_theFool_meaning">Freeing yourself from limitation, Expressing joy and youthful vigor, Being open-minded, Taking a leap of faith, Attuning yourself to your instincts, Being eager or curious, Exploring your potential, Embracing innovation and change</string>
    <string name="card01_theFool_qta">What would I do if I felt free to take a leap?\nHow willing am I to be vulnerable and open?\nHow might past experiences help in this new situation?</string>
    <string name="card01_theFool_description">With light step, as if earth and its trammels had little power to restrain him, a young man in gorgeous vestments pauses at the brink of a precipice among the great heights of the world; he surveys the blue distance before him-its expanse of sky rather than the prospect below. His act of eager walking is still indicated, though he is stationary at the given moment; his dog is still bounding. The edge which opens on the depth has no terror; it is as if angels were waiting to uphold him, if it came about that he leaped from the height. His countenance is full of intelligence and expectant dream. He has a rose in one hand and in the other a costly wand, from which depends over his right shoulder a wallet curiously embroidered. He is a prince of the other world on his travels through this one-all amidst the morning glory, in the keen air. The sun, which shines behind him, knows whence he came, whither he is going, and how he will return by another path after many days. He is the spirit in search of experience. Many symbols of the Instituted Mysteries are summarized in this card, which reverses, under high warrants, all the confusions that have preceded it.</string>
    <string name="card02_magician_name">The Magician</string>
    <string name="card02_magician_keywords">capability, empowerment, activity</string>
    <string name="card02_magician_fortune_telling">A powerful man may play a role in your day.\nYour current situation must be seen as one element of a much larger plan.</string>
    <string name="card02_magician_meaning">Taking appropriate action, Receiving guidance from a higher power, Becoming a channel of divine will, Expressing masculine energy in appropriate and constructive ways, Being yourself in every way</string>
    <string name="card02_magician_qta">What am I empowered to do? \nHow might my abilities come into play? \nTo what extent am I making the most of my talents?</string>
    <string name="card02_magician_description">A youthful figure in the robe of a magician, having the countenance of divine Apollo, with smile of confidence and shining eyes. Above his head is the mysterious sign of the Holy Spirit, the sign of life, like an endless cord, forming the figure 8 in a horizontal position . About his waist is a serpent-cincture, the serpent appearing to devour its own tail. This is familiar to most as a conventional symbol of eternity, but here it indicates more especially the eternity of attainment in the spirit. In the Magician\'s right hand is a wand raised towards heaven, while the left hand is pointing to the earth. This dual sign is known in very high grades of the Instituted Mysteries; it shews the descent of grace, virtue and light, drawn from things above and derived to things below. The suggestion throughout is therefore the possession and communication of the Powers and Gifts of the Spirit. On the table in front of the Magician are the symbols of the four Tarot suits, signifying the elements of natural life, which lie like counters before the adept, and he adapts them as he wills. Beneath are roses and lilies, the flos campi and lilium convallium, changed into garden flowers, to shew the culture of aspiration. This card signifies the divine motive in man, reflecting God, the will in the liberation of its union with that which is above. It is also the unity of individual being on all planes, and in a very high sense it is thought, in the fixation thereof. With further reference to what I have called the sign of life and its connexion with the number 8, it may be remembered that Christian Gnosticism speaks of rebirth in Christ as a change "unto the Ogdoad." The mystic number is termed Jerusalem above, the Land flowing with Milk and Honey, the Holy Spirit and the Land of the Lord. According to Martinism, 8 is the number of Christ.</string>
    <string name="card03_high_priestess_name">The High Priestess</string>
    <string name="card03_high_priestess_keywords">intuition, reflection, purity, initiation</string>
    <string name="card03_high_priestess_fortune_telling">A mysterious woman arrives. \nA sexual secret may surface. \nSomeone knows more than he or she will reveal</string>
    <string name="card03_high_priestess_meaning">Listening to your feelings and intuitions, Exploring unconventional spirituality, Keeping secrets, Being receptive, Reflecting instead of acting, Observing others, Preserving purity</string>
    <string name="card03_high_priestess_qta">What might a rebel against tradition do? \nWhat isn\'t being said or revealed? \nWhat could be achieved by observing and reflecting?</string>
</resources>