<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.cards.CardsHomeFragment">


    <Button
        android:id="@+id/dayCardBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/cards_home_card_of_day_btn"
        android:textSize="22sp"
        android:backgroundTint="#F8BE64"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cardReadingBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal"
        android:text="@string/cards_home_all_readings_btn"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/dayCardBTN"
        app:layout_constraintStart_toStartOf="@+id/dayCardBTN"
        app:layout_constraintTop_toBottomOf="@+id/dayCardBTN" />

    <Button
        android:id="@+id/allCardsListBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#21ACC5"
        android:gravity="center_horizontal"
        android:text="@string/cards_home_all_arcanas_btn"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/cardReadingBTN"
        app:layout_constraintStart_toStartOf="@+id/cardReadingBTN"
        app:layout_constraintTop_toBottomOf="@+id/cardReadingBTN" />




</androidx.constraintlayout.widget.ConstraintLayout>